syntax = "proto3";

option csharp_namespace = "BasketAPI.Grpc.Client";

package BasketApi;

service Basket {
  rpc GetBasket (BasketGetRequest) returns (BasketModel);
  rpc UpdateBasket (BasketUpdateRequest) returns (BasketModel);
  rpc DeleteBasket (BasketDeleteRequest) returns (Empty);
}

message BasketGetRequest {
  string userName = 1;
}

message BasketUpdateRequest {
  BasketModel basket = 1;
}

message BasketDeleteRequest {
  string userName = 1;
}

message BasketModel {
  string userName = 1;
  repeated BasketItemModel items = 2;
}

message BasketItemModel {
  string ProductId = 1;
  string ProductName = 2;
  int32 Quantity = 3;
  double Price = 4;
}

message Empty {
}
